<resources>
    <string name="app_name">CovidTracker</string>
    <string name="negative">Negative</string>
    <string name="positive">Positive</string>
    <string name="death">Death</string>
    <string name="week">Week</string>
    <string name="month">Month</string>
    <string name="max">Max</string>
    <string name="state">State</string>
    <string name="app_description">COVID-19 cases per day</string>
</resources>