<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/label_state"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/state"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <org.angmarch.views.NiceSpinner
        android:id="@+id/spinner_state"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:ellipsize="end"
        android:maxLines="1"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintStart_toEndOf="@id/label_state"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/label_state"
        app:layout_constraintBottom_toBottomOf="@id/label_state"
        app:popupTextAlignment="start"/>

    <RadioGroup
        android:id="@+id/radio_group_metric"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center|center_horizontal|center_vertical"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/label_state">

        <RadioButton
            android:id="@+id/radio_negative"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/negative" />

        <RadioButton
            android:id="@+id/radio_positive"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/positive" />

        <RadioButton
            android:id="@+id/radio_death"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/death" />
    </RadioGroup>

    <com.robinhood.spark.SparkView
        android:id="@+id/spark_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:paddingTop="16dp"
        android:paddingBottom="8dp"
        android:background="@color/background_shade"
        app:layout_constraintBottom_toTopOf="@+id/radio_group_time"
        app:layout_constraintTop_toBottomOf="@id/radio_group_metric" />

    <RadioGroup
        android:id="@+id/radio_group_time"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:paddingBottom="8dp"
        android:gravity="center|center_horizontal|center_vertical"
        android:orientation="horizontal"
        android:background="@color/background_shade"
        app:layout_constraintBottom_toTopOf="@+id/ticker_metric"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <RadioButton
            android:id="@+id/radio_week"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/week" />

        <RadioButton
            android:id="@+id/radio_month"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/month" />

        <RadioButton
            android:id="@+id/radio_max"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/max" />
    </RadioGroup>

    <TextView
        android:id="@+id/label_date"
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:layout_marginStart="16dp"
        android:gravity="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="May 30, 2020" />

    <com.robinhood.ticker.TickerView
        android:id="@+id/ticker_metric"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:gravity="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/label_date"
        tools:text="4,354" />

</androidx.constraintlayout.widget.ConstraintLayout>